# guardrailz

./: .deployment-checklist.md  CHANGES_SUMMARY.md  DEPLOYMENT_SUMMARY.md  DEPLOY_QUICK_START.md  GITHUB_INSTALL_NOTE.md  INSTALL.md  LICENSE  MANIFEST.in  PACKAGE_STRUCTURE_FIX.md  PYPI_DEPLOYMENT.md  README.md  cli.py  core.py  exceptions.py  pyproject.toml  requirements.txt  sample.env  test_guardrailz_testdata.py
.devcontainer/: devcontainer.json
.github/workflows/: publish-to-pypi.yml  test-build.yml
examples/: README.md  example_boolean_pattern.py  example_custom_config.py  example_exception_pattern.py  example_mathchat.py  example_quick_check.py
guardrailz/: __init__.py  config.py  signatures.py
testdata/: cybersecurity_tests.csv
tests/: TESTING.md  test_guardrailz_testdata.py
tests/testdata/: bass_fishing_tests.csv
